@@ -26,11 +26,13 @@
 
 package haven;
 
+import java.lang.ref.WeakReference;
 import java.util.*;
 import java.awt.Color;
 
 public class Glob {
-    public UI ui; //TODO: Glob should honestly make the ui, not have the UI attach onto it.
+    //TODO: Glob should honestly make the ui, not have the UI attach onto it.
+    public WeakReference<UI> ui;
     public double time, epoch = Utils.rtime();
     public Astronomy ast;
     public final OCache oc = new OCache(this);
