@@ -36,7 +36,8 @@ public class MarkerData {
 	markable.put("gfx/terobjs/villageidol", new Marker("Village", "custom/mm/icons/vidol", Type.SLOTH));
         markable.put("gfx/terobjs/minehole", new LinkedMarker("Minehole", "custom/mm/icons/minehole", Type.LINKED, MapFile.MINEHOLE));
 	markable.put("gfx/terobjs/ladder", new LinkedMarker("Ladder", "custom/mm/icons/ladder", Type.LINKED, MapFile.LADDER));
-	markable.put("gfx/tiles/ridges/cavein", new LinkedMarker("Cave", "gfx/hud/mmap/cave", Type.LINKED, MapFile.CAVE));
+	markable.put("gfx/tiles/ridges/cavein", new LinkedMarker("Cave (Surface)", "gfx/hud/mmap/cave", Type.LINKED, MapFile.CAVE));
+        markable.put("gfx/tiles/ridges/caveout", new LinkedMarker("Cave (L1)", "gfx/hud/mmap/cave", Type.LINKED, MapFile.CAVEIN));
     }
 
     public static Optional<Marker> marker(final String name) {
